--- a/files/waybar/graphite.css
+++ b/files/waybar/graphite.css
@@ -22,12 +22,12 @@
 
 /* Base HyDE Styles */
 
+
 window#waybar {
-    /* background: @bar-bg; */
     background: rgba(0,0,0,0.5);
+    /* border: 2px solid rgba(240,240,240,0.4); */
     border-radius: 10px;
 }
-
 /*
  These are groups/islands configs
 
